candidate photo +squashed minor bugs

--- a/src/app/election-details/election-details.component.css
+++ b/src/app/election-details/election-details.component.css
@@ -11,11 +11,17 @@
   margin-top: 1%;
 }
 
+
+img {
+  max-width: 10%;
+  margin-right: 3%;
+}
+
 button {
   margin-top: 1%;
 }
 
-.candidate_info{
+.candinfo{
   display: flex;
     justify-content: space-around;
     align-items: left;
